# summoning-wars

./: .cproject  .gitignore  .project  AUTHORS.md  CMakeLists.txt  Changelog.txt  DEPENDENCIES.md  INSTALL  License.txt  README  README.md  Sumwars_installer_bitrock.xml  authors.md  authors.txt  errorchecker.py  install.cmd  install.sh  ogre.cfg  perform-cppcheck  plugins.cfg  plugins_mac.cfg  plugins_win.cfg  plugins_win_d.cfg  quickmake  resources.cfg.in  swpreload.cfg
CMakeModules/: BoostOgreGetVersion.cmake  CapitaliseName.cmake  CheckOGREPlugins.cmake  CompilerConfig.cmake  CompilerConfigGCC.cmake  CompilerConfigMSVC.cmake  DetermineLibVorbisVersion.cmake  DetermineOgreThreadProvider.cmake  DetermineVersion.cmake  FindALUT.cmake  FindBoostOGRE.cmake  FindCEGUI.cmake  FindCEGUIOGRE.cmake  FindEnet.cmake  FindGNUWIN.cmake  FindGoogleBreakpad.cmake  FindLua.cmake  FindLua51.cmake  FindOGRE.cmake  FindOIS.cmake  FindOgg.cmake  FindOpenAL.cmake  FindPhysFS.cmake  FindPthreads.cmake  FindVorbis.cmake  FlagUtilities.cmake  GenerateToluaBindings.cmake  GetGCCCompilerFlags.cmake  InstallConfig.cmake  LibraryConfig.cmake  LibraryConfigApple.cmake  LibraryConfigTardis.cmake  PackageConfig.cmake  PackageConfigMSVC.cmake  PackageConfigMinGW.cmake  ParseMacroArguments.cmake  PrecompiledHeaderFiles.cmake  SeparateFlags.cmake  SetCacheAdvanced.cmake  SourceFileUtilities.cmake  (+1 more)
data/abilities/: archer_ablt.xml  example.xml  mage_ablt.xml  monster_air_ablt.xml  monster_fire_ablt.xml  monster_ice_ablt.xml  monster_shadow_ablt.xml  npc_abilities.xml  undead_ablt.xml  unique_ablt.xml
data/items/: amulet.xml  armor.xml  axes1h.xml  axes2h.xml  glove.xml  goblinEqu.xml  hammer1h.xml  hammer2h.xml  hat.xml  helmet.xml  items.xml  longbow.xml  polearms.xml  potion.xml  ring.xml  robes.xml  shields.xml  shortbow.xml  staff.xml  swords1h.xml  swords2h.xml  undeadEqu.xml  wands.xml
data/lua/: debug.lua  locgenerate.lua  music.lua  quests.lua  unitfunc.lua
data/monsters/: aisenMonsterStats.xml  goblinStats.xml  monsters.xml  npcStats.xml
data/npc/: dwarfcastle.xml  joringsbridge_npc.xml  npc.xml
data/obj_templates/: mapgentemplates.xml  obj_templates.xml  tree.xml
data/object_groups/: benchmarkregion.xml  berryBush.xml  border(corner).xml  border(diag_smallcorner).xml  border(filled)cave.xml  border(four_smallcorner)cave.xml  border(side)(left_smallcorner).xml  border(side)(two_smallcorner).xml  border(side).xml  border(side)cave.xml  border(three_smallcorner).xml  border(three_smallcorner)cave.xml  border(twocorner).xml  border(twocorner)cave.xml  border(twoside).xml  border(twoside)cave.xml  caveHideOut.xml  commandHouse.xml  copperRock.xml  councilStorage.xml  cryptRoom.xml  cryptShrine.xml  cursedFissure.xml  dwarfenwall.xml  dwarfenwallRampart.xml  exitBlock.xml  flowerPatch.xml  joringsbridge.xml  konzColumn.xml  lowerCavesConstruction.xml  maylonsGraveChamber.xml  medBackalley.xml  meetIreana.xml  og_template.xml  spiderLair.xml  test.xml  test_templ.xml  trees1.xml
data/objects/: axe2HStand.xml  barrel2.xml  barrel4.xml  barrel5.xml  barrel_m1.xml  barricade_t1.xml  berry.xml  blockExit.xml  board1.xml  board3.xml  book10.xml  book4.xml  book6.xml  book7.xml  book8.xml  book9.xml  book_open1.xml  book_open2.xml  box_m1.xml  buttress_wall1.xml  buttress_wall_cOut1.xml  buttress_wall_cOut2.xml  buttress_wall_m1.xml  buttress_wall_s1.xml  cabinet1.xml  cabinet2.xml  cabinet3.xml  cave_column1.xml  cave_wall1.xml  cave_wall_cOut1.xml  chestBox.xml  cogDwarf.xml  cogOld.xml  cogScript_lean.xml  cogStone.xml  comCrystal.xml  councilGuardCorpse1.xml  councilGuardCorpse2.xml  crane.xml  cryptDebris2.xml  (+86 more)
data/playerclasses/: playerclasses.xml
data/projectiles/: npc_proj.xml  projectiles.xml
data/quests/: besieged_farm.xml  fortify_dwarfenwall.xml  goblins.xml  herbalist.xml  maylons_grave.xml  scene7.xml  scout.xml  theAmbush.xml  tutorial.xml
data/renderinfo/: aisenNPC.xml  arachnids.xml  armor.xml  axes1h.xml  bows.xml  council.xml  councilInventory.xml  door.xml  example.xml  globalNPC.xml  goblins.xml  hat.xml  items.xml  jewellery.xml  misc.xml  missile.xml  player.xml  swords1h.xml  tests.xml  wands.xml
data/sound/: battle.xml  monster.xml  player.xml  skills.xml  test.xml
data/world/: aisen.xml  cursedCaves.xml  dwarfenwall.xml  greySkyladder.xml  medair.xml  necrotia.xml  world.xml
doc/: Doku.html  OGTemplate_simple.xml  QuestBookTemplate_bsp.xml  changelog.txt  demo_content.txt  eventdoku.txt  install_win.txt  soundFehler.txt  sounds  wochenplan_12_1.txt  wochenplan_13_4.txt  wochenplan_1_12.txt  wochenplan_26_1.txt  wochenplan_9_12.txt
doc/ModelDoc/: archer_f.xml  bloodbeak.xml  boulder.xml  character.htm  character.xml  councl_armMW.xml  councl_robMM.xml  fireLouse.xml  fire_slug.xml  fire_slug_mutant.xml  gobLeg_arm_fs.xml  gobLeg_arm_ms.xml  goblinBrown.xml  goblinGreen.xml  goblin_glvF.xml  goblin_glvMW.xml  guardAisen.xml  guardCnl.xml  human_ghost.xml  infernoBehemoth.xml  knight.xml  leathArmFA.xml  leathArmMW.xml  leathArm_fs.xml  leath_armMW.xml  leath_glvM.xml  lich.xml  mage_m.xml  merc_armF.xml  merc_armM.xml  merc_arm_fs.xml  models.xsl  mojo_tortured.xml  necro_robMT.xml  necromancerM.xml  necromancer_robeM.xml  novice_robMT.xml  plate_glv.xml  plate_glvF.xml  plate_glvM.xml  (+15 more)
doc/balancing/: testfaelle.txt
doc/design/: Skills.odt  region-structure_changes  sidequests.odt  skilltrees.ods  storyguide.odt  summary_eng.odt  sumwars_verbesserungen.odt  townInfo.odt  weapons.ods
doc/doxygen/: Doxyfile  Makefile  Makefile.txt
doc/formateUndRichtlinien/: format_netpkg.txt  format_saves.txt  prog_style.txt
doc/scriptdoc/: Doxyfile  dialoguefunc.h  eventfunc.h  itemfunc.h  objectfunc.h  regionfunc.h
doc/xmlFormats/: mapgentemplates.xml  monster.xml  obj_templates.xml  object_group.xml  quests.xml  renderInfo.xml  (+1 more)
packaging/: sumwars.desktop
src/: config.h.in  sumwars.cbp  version.h.in
tools/: scale_particles
translation/: compile_messages.cmd  compile_messages.sh  domains  update_src_to_pot.sh  update_translation.cmd  update_translation.sh
(+2161 files in other folders)
